Making *box two words

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,7 +36,7 @@
     {% if page.image.feature %}
     <div class="page-lead" style="background-image:url({{ site.url }}/images/{{ page.image.feature }})">
       <div class="wrap page-lead-content">
-        <h1>Graybox Testing</h1>
+        <h1>Gray Box Testing</h1>
         <h2>Minimal Testing with Maximum Benefit</h2>
         <a href="{{ site.url }}/what/" class="btn-inverse">Get Started Now!</a></div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
