--- a/_sass/_sliding-menu.scss
+++ b/_sass/_sliding-menu.scss
@@ -83,7 +83,7 @@
     transform: translateX(0);
   }
   h5 {
-    margin: 0 20% 0 10%;
+    margin: 0 0 0 60px;
     @include media($large) {
       margin-right: 20%;
     }
